--- a/content/resources/esd-933s05.md
+++ b/content/resources/esd-933s05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The Five Step Negotiations Model. (Courtesy of Joel Cutcher-Gershenfeld.)
-file: /media/courses/esd-933-technology-policy-negotiations-and-dispute-resolution-spring-2005/1025004256504cd33fbb0dc5e6e4dd0c_esd-933s05.jpg
+file: /courses/esd-933-technology-policy-negotiations-and-dispute-resolution-spring-2005/1025004256504cd33fbb0dc5e6e4dd0c_esd-933s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The Five Step Negotiations Model. (Courtesy of Joel Cutcher-Gershenfeld.)
@@ -14,3 +14,5 @@ resourcetype: Image
 title: esd-933s05.jpg
 uid: 10250042-5650-4cd3-3fbb-0dc5e6e4dd0c
 ---
+The Five Step Negotiations Model. (Courtesy of Joel Cutcher-Gershenfeld.)
+
