Sync all content

--- a/content/resources/esd-933s05.md
+++ b/content/resources/esd-933s05.md
@@ -9,10 +9,10 @@ image_metadata:
   image-alt: The Five Step Negotiations Model. 1) Prepare 2)Bargain Over How to Bargain
     3) Open and Explore 4) Focus and Agree 5) Implement and Sustain
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: esd-933s05.jpg
 uid: 10250042-5650-4cd3-3fbb-0dc5e6e4dd0c
 ---
 The Five Step Negotiations Model. (Courtesy of Joel Cutcher-Gershenfeld.)
-
