--- a/content/resources/esd-933s05.md
+++ b/content/resources/esd-933s05.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: The Five Step Negotiations Model. (Courtesy of Joel Cutcher-Gershenfeld.)
 file: /courses/esd-933-technology-policy-negotiations-and-dispute-resolution-spring-2005/1025004256504cd33fbb0dc5e6e4dd0c_esd-933s05.jpg
+file_size: 61643
 file_type: image/jpeg
 image_metadata:
   caption: The Five Step Negotiations Model. (Courtesy of Joel Cutcher-Gershenfeld.)
